MediaPortal/src/app/login/login.component.scss
.logindiv {
  display: flex;
  justify-content: center;
  padding: 10% 0px;
}

.mat-form-field {
  width: 100%;
  min-width: 300px;
}

mat-card-title,
mat-card-content {
  display: flex;
  justify-content: center;
}

.error {
  padding: 16px;
  width: 300px;
  color: white;
  background-color: red;
}

.button {
  display: flex;
  justify-content: flex-end;
}

